# advent-of-code

./: .gitignore  advent-of-code.cabal
2021/: Day1.hs  Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day8.hs  README.md  shell.nix  sources.json
2021/src/AOC/: Day14.hs
2022/: flake.nix
2022/01/: main.idr
2022/02/: CHANGELOG.md  LICENSE  aoc.cabal
2022/02/src/: MyLib.hs
2022/03/: aoc.cabal
2022/03/src/: MyLib.hs
2022/04/: aoc.cabal
2022/04/src/: MyLib.hs
2022/05/: aoc.cabal
2022/05/src/: MyLib.hs
2022/06/: aoc.cabal
2022/06/src/: Aoc.hs
2022/07/src/: Aoc.hs
2022/08/: aoc.cabal
2022/08/src/: Aoc.hs
2022/09/src/: Aoc.hs
2022/10/src/: Aoc.hs
2022/11/: aoc.cabal
2022/11/src/: Aoc.hs
2022/12/: aoc.cabal
2022/12/src/: Aoc.hs
2022/13/: '  cabal.project
2022/13/src/: Aoc.hs
2022/14/: aoc.cabal
2022/14/src/: Aoc.hs
2022/15/src/: Aoc.hs
2022/16/: aoc.cabal  sample0.txt
2022/16/src/: Aoc.hs
2022/17/: aoc.cabal
2022/17/src/: Aoc.hs
2022/18/src/: Aoc.hs
2023/: flake.nix
2023/01/: x01.cabal
2023/01/src/: Aoc.hs
2023/02/: x02.cabal
2023/02/src/: Aoc.hs
2025/: build.zig  build.zig.zon  flake.nix
2025/rust/: flake.nix
2025/src/: day2.zig
2025/zig/: flake.nix
2025/zig/src/: DisjointSetRanked.zig  DisjointSetSized.zig  day1.zig  day3.zig  day4.zig  day5.zig  day6.zig  day7.zig  day8.zig  day9.zig
src/AOC/: Day10.hs  Day11.hs  Day12.hs  Day7.hs  Day9.hs
